--- a/homepage.css
+++ b/homepage.css
@@ -113,9 +113,62 @@ body{
 
 .actions h1{
     font-size: 30px;
-    margin-top: -350px;
-    margin-left: 100px;
+    margin-top: -340px;
+    margin-left: 450px;
+    color: white;
+
 }
+
+.transactions{
+    margin-left: 460px;
+    margin-top: 27px;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+.payment{
+    margin-left: 680px;
+    margin-top: -180px;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+.that{
+    width: 300px;
+    height: 2px;
+    background-color: white;
+    margin-left: 450px;
+    margin-top: -150px;
+}
+
+.that2{
+    width: 300px;
+    height: 2px;
+    background-color: white;
+    margin-left: 450px;
+    margin-top: 45px;
+}
+
+.that3{
+    width: 300px;
+    height: 2px;
+    background-color: white;
+    margin-left: 450px;
+    margin-top: 40px;
+}
+
+.that4{
+    width: 300px;
+    height: 2px;
+    background-color: white;
+    margin-left: 450px;
+    margin-top: 50px;
+}
+
+
+
 .box {
     width: 700px;
     height: 360px; /* Allow the height to adjust based on content */
@@ -127,6 +180,42 @@ body{
     margin-top: 30px;
     margin-left: -600px;
     border-radius: 67px;
+    padding-top: 30px;
 }
+
+.card2{
+    width: 390px;
+    height: 230px;
+    background-image: url(assets/Screenshot\ 2023-10-04\ 111208-benzin-preview.png);
+    background-position: center;
+    background-size: cover;
+    background-color: transparent;
+    border: none;
+    margin-top: -400px;
+    margin-left: 800px;
+
+}
+
+.card3{
+    width: 390px;
+    height: 230px;
+   background-image: url(assets/Screenshot\ 2023-10-04\ 111347-benzin-preview.png);
+   background-position: center;
+   background-size: cover;
+   background-color: transparent;
+   border: none;
+
+}
+
+.track{
+    width: 482px;
+    height: 640px;
+    flex-shrink: 0;
+    border-radius: 69px;
+    background: #414D66;
+    margin-top: 600px;
+}
+
+
 
 
