--- a/sub.css
+++ b/sub.css
@@ -1,154 +1,94 @@
-body{
-    background-color: blueviolet;
+body {
+   background-color: #FFF1D6;
 }
 
+nav{
+    background-color: #566246;
+    color:  #FFF1D6;
+}
 
 .nav-link{
-    font-family: 'Italiana', serif;
-    color: wheat;
-    font-size: 20px;
+    color:  #FFF1D6;
+
 }
 
-.nav-link:hover {
-  color: #0b1612;
+.nav{
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    text-decoration: none;
+    color:  #FFF1D6;
+
 }
 
-.nav-link.active {
-  border-bottom: 2px solid whitesmoke;
-  color: white;
+.container h1{
+    font-family: 'Coustard', serif;
+    font-size: 50px;
+    font-weight: bold;
 }
 
-.toggle{
-    margin-top: -100px;
-    padding-left: 50px;
+.name{
+    font-family: 'Coustard', serif;
+    font-size: 45px;
+    font-weight: bolder;
+    color:  #FFF1D6;
 }
 
-
-
-.toggle ul{
-    list-style: none;
-    width: 276px;
-    height: 60px;
-    flex-shrink: 0;
-    border-radius: 60px;
-    background: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(45px);
-    margin-left: 30px;
+.card{
+    background-color: transparent;
 }
 
-.toggle li{
-    float: left;
-    margin-left: 80px;
-    background-color: red;
-    margin-top: -37px;
+#form {
+    width: 300px;
+    margin-top: -40px;
+    padding: 20px;
+    margin-left: 100px;
+    border-radius: 4px;
+    font-size: 12px;
 }
 
-.up{
-    font-family: 'Roboto', sans-seri;
-    margin-top: 100px;
-    margin-left: 400px;
+#form h1 {
+    color: #0f2027;
+    text-align: center;
 }
 
-.up h1{
-    font-size: 250px;
-}
-
-.form{
-    margin-left: 290px;
-    margin-top: 100px;
-}
-
-.form h3{
-    padding-left: 30px;
+#form button {
+    padding: 10px;
+    margin-top: 10px;
+    width: 100%;
     color: white;
+    background-color: #566246;
+    border: none;
+    border-radius: 4px;
 }
 
-.form-input{
-    width: 280px;
-    height: 60px;
-    flex-shrink: 0;
-    border-radius: 70px;
-    border: 2px solid #000;
-    background: rgba(30, 30, 30, 0.00);
-    
+.input-control {
+    display: flex;
+    flex-direction: column;
 }
 
-.choose{
-    width: 280px;
-    height: 60px;
-    flex-shrink: 0;
-    border-radius: 70px;
-    border: 2px solid #000;
-    background: rgba(30, 30, 30, 0.00);
-    
+.input-control input {
+    border: 2px solid rgb(255, 255, 255);
+	border-radius: 50px;
+	display: block;
+	font-size: 12px;
+	padding: 10px;
+	width: 100%;
+    background-color:#C17240;
 }
 
-.Username{
-    margin-left: 340px;
-    margin-top: -100px;
+.input-control input:focus {
+    outline: 0;
 }
 
-.password{
-    margin-left: 340px;
-    margin-top: 30px;
+.input-control.success input {
+    border-color: #09c372;
 }
 
-.Confirm{
-    margin-left: 670px;
-    margin-top: -155px;
+.input-control.error input {
+    border-color: #ff3860;
 }
 
-.choose{
-    margin-left: 668px;
-    margin-top: 34px;
+.input-control .error {
+    color: #ff3860;
+    font-size: 9px;
+    height: 13px;
 }
-
-
-
-.sign h4{
-    margin-bottom: 8px;
-}
-
-
-.sign2 h4{
-    margin-left: 70px;
-    margin-top: 120px;
-}
-
-.sign-link{
-    color: blue;
-    text-decoration: none;
-    background-color: black;
-}
-
-.sign-link2{
-    color: blue;
-    text-decoration: none;
-    background-color: black;
-    margin-left: 200px;
-}
-
-.sign3{
-    font-family: 'Roboto', sans-seri;
-    margin-left: -60px;
-    width: 163px;
-    height: 60px;
-   
-    border-radius: 60px;
-}
-
-.sign3 h4{
-    margin-top: -10px;
-    margin-left: 45px;
-    width: 200px;
-}
-
-.button{
-    margin-top: 40px;
-    margin-left: 750px;
-}
-
-
-
-
-
